--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.5.1",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.11",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
@@ -36,6 +37,7 @@
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.116",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
